Fixed an alignment issue on Premieres page.

--- a/src/styles/performances.module.scss
+++ b/src/styles/performances.module.scss
@@ -108,6 +108,7 @@
 }
 
 .performanceList {
+  clear: both;
   list-style: none;
   margin: 0;
   overflow: hidden;
