--- a/src/styles/recording.module.scss
+++ b/src/styles/recording.module.scss
@@ -58,6 +58,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  transform: translate3d(0,0,0);
 
   .imageWrapper {
     @include aspect-ratio;
